--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,18 @@
+import com.android.build.gradle.internal.dsl.ProductFlavor
+
 apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "23.0.3"
+    buildToolsVersion '24.0.0'
 
+    def config = defaultConfig {
+        applicationId "com.example.android.miwok"
+        minSdkVersion 15
+        targetSdkVersion 23
+        versionCode 1
+        versionName "1.0"
+    }
     defaultConfig {
         applicationId "com.example.android.miwok"
         minSdkVersion 15
@@ -23,8 +32,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.3.0'
-    compile 'com.android.support:support-v4:23.3.0'
-    compile 'com.android.support:design:23.3.0'
-    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
+    compile 'com.android.support:appcompat-v7:24.0.0'
+    compile 'com.android.support:support-v4:24.0.0'
+    compile 'com.android.support:design:24.0.0'
+    compile 'com.google.android.gms:play-services-appindexing:9.2.1'
 }
